# netzwerk

./: CMakeLists.txt  README.md  setup.py
lib/doctest/: doctest.h
src/netzwerk/: bindings.cc  ode.cc  ops.cc  ops.h
src/netzwerk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: ops_test.py  test_cc.py  test_math.cpp
